# q

./: .gitignore  Cargo.toml  README.md  graphviz.sh
benchmark/: casc24.csv  casc24_fnt.csv  casc24_fnt.summary  casc24_fnt_1.csv  casc24_fnt_1.summary  casc24_fnt_10.csv  casc24_fnt_10.summary  casc24_fnt_10_first-neg.csv  casc24_fnt_10_first-neg.summary  casc24_fnt_10_no-sel.csv  casc24_fnt_10_no-sel.summary  casc24_fnt_10_zipper-sel.csv  casc24_fnt_30_first-neg.csv  casc24_fnt_30_first-neg.summary  casc24_fnt_30_no-sel.csv  casc24_fnt_30_no-sel.summary  casc24_fnt_30_zipper-sel.csv  casc24_fnt_30_zipper-sel.summary  casc24_fof.csv  casc24_fof.summary  casc24_fof_1.csv  casc24_fof_1.summary  casc24_fof_10.csv  casc24_fof_10.summary  casc24_fof_10_first-neg.csv  casc24_fof_10_first-neg.summary  casc24_fof_10_no-sel.csv  casc24_fof_10_no-sel.summary  casc24_fof_10_zipper-sel.csv  casc24_fof_10_zipper-sel.summary  casc24_fof_30_first-neg.csv  casc24_fof_30_first-neg.summary  casc24_fof_30_no-sel.csv  casc24_fof_30_no-sel.summary  casc24_fof_30_zipper-sel.csv  casc24_fof_30_zipper-sel.summary  casc29_fnt.csv  casc29_fnt.summary  casc29_fnt_1.csv  casc29_fnt_1.summary  (+150 more)
presentation/: literature.bib  perf.data  presentation.typ  theme.typ
problems/: GEO090+1.p  KRS018+1.p  KRS063+1.p  MGT019+2.p  ex2.p  ex3.p
src/: clause.rs  clause_queue.rs  discr_tree.rs  feature_vector.rs  kbo.rs  lib.rs  main.rs  matching.rs  multi_set.rs  persistent_vec_iter.rs  position.rs  pretty_print.rs  proofs.rs  selection.rs  simplifier.rs  subst.rs  subsume.rs  superposition.rs  term_bank.rs  (+5 more)
(+58 files in other folders)
