[package]
name = "q"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
memory-stats = { version = "1.2", features = ["always_use_statm"] }
tptp = "0.31.1"

[lib]
name = "qlib"
path = "src/lib.rs"

[[bin]]
name = "qprover"
path = "src/main.rs"


